# msgraph-mta

./: README.md  pyproject.toml
.github/: CODEOWNERS
src/msgraph_mta/: msgmta.py
src/msgraph_mta/tests/: test_msgmta.py
