[project]
name = "msgraph-mta"
version = "0.1.0"
description = "simple mta sending mails via MSGraph"
authors = [
    {name = "Klaus Foerster",email = "klaus.foerster@mhcomm.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msal (>=1.32.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
